bug squashing

--- a/style.css
+++ b/style.css
@@ -321,6 +321,11 @@ img {
     text-decoration: none;
 }
 
+.btn.disabled:hover {
+    background: #ffffff;
+    text-decoration: none;
+}
+
 .container {
     width: 100%;
     height: 100%;
